- celebrity image - layout bug fixes

--- a/grails-app/assets/stylesheets/vanity/list.less
+++ b/grails-app/assets/stylesheets/vanity/list.less
@@ -56,7 +56,7 @@
   padding-bottom: 10px;
 
   img {
-    margin-top: 15px;
+    margin: 15px auto 0 auto;
   }
 }
 
